<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VoiceApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="name">Name Here</string>
    <string name="pass">Password Here</string>
    <string name="course">Course Here</string>
    <string-array name="date"><item>Date</item>
        <item>1</item><item>2</item><item>3</item>
        <item>4</item><item>5</item><item>6</item>
        <item>7</item><item>8</item><item>9</item>
        <item>10</item><item>11</item><item>12</item>
        <item>13</item><item>14</item><item>15</item>
        <item>16</item><item>17</item><item>18</item>
        <item>19</item><item>20</item><item>21</item>
        <item>22</item><item>23</item><item>24</item>
        <item>25</item><item>26</item><item>27</item>
        <item>28</item><item>29</item><item>30</item><item>31</item>
    </string-array>
    <string-array name="month"><item>Month</item>
        <item>1</item><item>2</item><item>3</item>
        <item>4</item><item>5</item><item>6</item>
        <item>7</item><item>8</item><item>9</item>
        <item>10</item><item>11</item><item>12</item>
    </string-array>
 <string-array name="year"><item>Year</item>
        <item>1970</item><item>1971</item><item>1972</item><item>1973</item><item>1974</item><item>1975</item><item>1976</item><item>1977</item><item>1978</item><item>1979</item><item>1980</item>
        <item>1981</item><item>1982</item><item>1983</item><item>1984</item><item>1985</item><item>1986</item><item>1987</item><item>1988</item><item>1989</item><item>1990</item>
        <item>1991</item><item>1992</item><item>1993</item><item>1994</item><item>1995</item><item>1996</item><item>1997</item><item>1998</item><item>1999</item><item>2000</item>
        <item>2001</item><item>2002</item><item>2003</item><item>2004</item><item>2005</item><item>2006</item><item>2007</item><item>2008</item><item>2009</item><item>2010</item>
        <item>2011</item><item>2012</item><item>2013</item><item>2014</item><item>2015</item><item>2016</item>
        </string-array>
        <string name="register">Register</string>
        <string name="dob">DOB</string>
        <string name="fname">Father Name</string>
        <string name="email">Email</string>
        <string name="mobile">Mobile</string>
        <string name="roll">Roll Number</string>
</resources>