

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/a"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/FloralWhite"
            android:paddingTop="5dp" >

            <EditText
                android:id="@+id/EditText1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/name"
                android:textStyle="italic" />

            <ImageButton
                android:id="@+id/ImageButton1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                
                android:src="@drawable/voice" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/FloralWhite"
            android:paddingTop="5dp" >

            <EditText
                android:id="@+id/EditText2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/course"
                android:textStyle="italic" />

            <ImageButton
                android:id="@+id/ImageButton2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                
                android:src="@drawable/voice" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/FloralWhite"
            android:paddingTop="5dp" >

            <EditText
                android:id="@+id/EditText3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/email"
                android:textStyle="italic" />

            <ImageButton
                android:id="@+id/ImageButton3"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/voice" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/FloralWhite"
        android:paddingTop="5dp" >

        <EditText
            android:id="@+id/editText4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/fname"
            android:textStyle="italic" >

            <requestFocus />
        </EditText>

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/voice" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/FloralWhite"
        android:paddingTop="5dp" >

        <EditText
            android:id="@+id/editText5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/pass"
            android:inputType="textPassword" />

        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/voice" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/FloralWhite"
        android:paddingTop="5dp" >

        <EditText
            android:id="@+id/EditText6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/roll"
            android:textStyle="italic" />

        <ImageButton
            android:id="@+id/imageButton6"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/voice" />
    </LinearLayout>
    
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/FloralWhite"
        android:paddingTop="5dp" >

        <EditText
            android:id="@+id/EditText7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/mobile"
            android:textStyle="italic" />

        <ImageButton
            android:id="@+id/imageButton7"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/voice" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/dob"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="71dp"
            android:layout_height="wrap_content"
            android:entries="@array/date" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="71dp"
            android:layout_height="wrap_content"
            android:entries="@array/month" />

        <Spinner
            android:id="@+id/spinner3"
            android:layout_width="71dp"
            android:layout_height="wrap_content"
            android:entries="@array/year" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/register" />

    </LinearLayout>

</LinearLayout>
</ScrollView>